--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -117,11 +117,11 @@ h4 {
   text-align: left;
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   h2 {
     font-size: 3em;
   }
-}
+} */
 
 /* -------- Header -------- */
 
@@ -161,7 +161,7 @@ header {
   position: relative;
 }
 
-@media (max-width: 1200px) {
+/* @media (max-width: 1200px) {
   #self-intro {
     left: 35%;
     width: auto;
@@ -177,7 +177,7 @@ header {
   #self-intro {
     display: none;
   }
-}
+} */
 
 /* -------- Nav -------- */
 
@@ -295,7 +295,7 @@ hr {
   border: 1px solid black;
 }
 
-@media (max-width: 1200px) {
+/* @media (max-width: 1200px) {
   #right-container {
     width: calc(65% + 8em);
     left: calc(35% - 8em);
@@ -339,7 +339,7 @@ hr {
     margin-left: 0em;
     border: 0.5px solid grey;
   }
-}
+} */
 
 /* -------- Card Rewrite -------- */
 
@@ -367,7 +367,7 @@ hr {
   margin-bottom: 5em;
   /* background-color: #E5E5E5; */
 }
-
+/*
 @media (max-width: 1200px) {
   .card {
     margin-left: 8em;
@@ -382,7 +382,7 @@ hr {
     margin-left: 1em;
     padding-right: 1em;
   }
-}
+} */
 
 /* -------- Button Rewrite -------- */
 
@@ -445,6 +445,7 @@ footer>a:hover {
   opacity: 1;
 }
 
+/*
 @media (max-width: 1200px) {
   footer {
     left: 35%;
@@ -462,7 +463,7 @@ footer>a:hover {
   footer>a {
     padding: 0 0.4em;
   }
-}
+} */
 
 /* -------- Decoration -------- */
 
@@ -543,7 +544,7 @@ footer>a:hover {
   margin-bottom: 0.5em;
 }
 
-@media (max-width: 1200px) {
+/* @media (max-width: 1200px) {
   .background {
     height: 60vh;
     background-color: rgba(0, 0, 0, 0.067);
@@ -563,7 +564,7 @@ footer>a:hover {
   #left-decoration {
     display: none;
   }
-}
+} */
 
 /* -------- Preloader -------- */
 
